ODRE data post-processing: Replace super-csv by apache commons-csv (#3075)
* Replace super-csv by apache commons-csv
* Cleaning

Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>
(cherry picked from commit 356175ec427fb273e3a9302f5060ce5473698c2e)